2005-08-23  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/basic/BasicTreeUI.java
	(BasicTreeUI): Moved these lines to installUI 
	because they were causing NullPointerExceptions.
	(installUI): Added code from constructor.
	* javax/swing/plaf/metal/MetalTreeUI.java
	(createUI): Formatted code.

2005-08-23  Tom Tromey  <tromey@redhat.com>

	* configure.ac: Fixed typo.

2005-08-23  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/event/SwingPropertyChangeSupport.java
	(writeObject): removed empty method,
	(readObject): likewise,
	(getPropertyChangeListeners()): implemented,
	(getPropertyChangeListeners(String)): likewise,
	(hasListeners): return true if there are any general listeners,
	added API docs all over.
	
2005-08-23  Mark Wielaard  <mark@klomp.org>

	* native/jni/qt-peer/qttextfieldpeer.cpp
	(Java_gnu_java_awt_peer_qt_QtTextFieldPeer_getCaretPosition): Renamed
	from Java_gnu_java_awt_peer_qt_QtTextFieldPeer_getCaretPositionNative.

	* gnu/java/awt/peer/qt/QtComponentPeer.java (getMinimumSizeNative):
	Removed unused native method.
	(getPreferredSizeNative): Likewise.

	* include/gnu_java_awt_peer_qt_QMatrix.h: Regenerated.
	* include/gnu_java_awt_peer_qt_QPainterPath.h: Likewise.
	* include/gnu_java_awt_peer_qt_QPen.h: Likewise.
	* include/gnu_java_awt_peer_qt_QtAudioClip.h: Likewise.
	* include/gnu_java_awt_peer_qt_QtButtonPeer.h: Likewise.
	* include/gnu_java_awt_peer_qt_QtCanvasPeer.h: Likewise.
	* include/gnu_java_awt_peer_qt_QtCheckboxPeer.h: Likewise.
	* include/gnu_java_awt_peer_qt_QtChoicePeer.h: Likewise.
	* include/gnu_java_awt_peer_qt_QtComponentPeer.h: Likewise.
	* include/gnu_java_awt_peer_qt_QtContainerPeer.h: Likewise.
	* include/gnu_java_awt_peer_qt_QtDialogPeer.h: Likewise.
	* include/gnu_java_awt_peer_qt_QtEmbeddedWindowPeer.h: Likewise.
	* include/gnu_java_awt_peer_qt_QtFileDialogPeer.h: Likewise.
	* include/gnu_java_awt_peer_qt_QtFontMetrics.h: Likewise.
	* include/gnu_java_awt_peer_qt_QtFontPeer.h: Likewise.