@@ -1,3 +1,11 @@
+2005-08-23  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* javax/swing/UIManager.java:
+	(addPropertyChangeListener): implemented,
+	(removePropertyChangeListener): likewise,
+	(getPropertyChangeListeners): likewise,
+	(setLookAndFeel): fire a property change event.
+	
 2005-08-23  Lillian Angel  <langel@redhat.com>
 
 	* javax/swing/plaf/basic/BasicTreeUI.java
